examples/anthos-service-mesh/istio-manifests/productpage-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: productpage-gateway
  namespace: bookinfo
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: productpage-ingress
  namespace: bookinfo
spec:
  hosts:
  - "*"
  gateways:
  - productpage-gateway
  http:
  - route:
    - destination:
        host: productpage
        port:
          number: 9080
